<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivityMain">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"
        android:singleLine="true"
        android:inputType="textPersonName|textCapWords"/>
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_phone"
        android:layout_below="@id/editTextName"
        android:inputType="phone"/>
    <TextView
        android:id="@+id/textViewScholar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_scholar"
        android:textSize="20sp"
        android:layout_below="@id/editTextPhone"/>
    <Spinner
        android:id="@+id/spinnerScolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:entries="@array/spinner_scholar"
        android:layout_below="@id/textViewScholar">
        </Spinner>
    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_genero"
        android:textSize="30sp"
        android:layout_below="@id/spinnerScolar"/>
    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSex"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radioButtonMas"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:hint="@string/text_mas"
            android:textSize="20sp"
        />
        <RadioButton
            android:id="@+id/radioButtonFem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_fem"/>
        </RadioGroup>
    <TextView
        android:id="@+id/textViewBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/radioButtonGroup"
        android:hint="@string/text_Libro"/>
    <AutoCompleteTextView
        android:id="@+id/autoCompleteBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewBook"/>
    <CheckedTextView
        android:id="@+id/checkedTextSports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/autoCompleteBooks"
        android:hint="@string/text_sport"
        android:checked="false"
        android:checkMark="?android:attr/textCheckMark"
        android:onClick="onClickCheck"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_clean"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickClear"/>
</RelativeLayout>
